--- a/test/browser/index.html
+++ b/test/browser/index.html
@@ -1,5 +1,5 @@
 <html>
-<script type="text/javascript" src="../dist/main.js"></script>
+<script type="text/javascript" src="../dist/index.js"></script>
 <script type="text/javascript">
     window.EnvLabel.init();
 </script>
