Change output file name

--- a/test/browser/index.html
+++ b/test/browser/index.html
@@ -20,7 +20,7 @@
         font-weight: bold;
     }
 </style>
-<script type="text/javascript" src="../../dist/js/index.js"></script>
+<script type="text/javascript" src="../../dist/js/env-label.js"></script>
 <script type="text/javascript">
     window.EnvLabel.init({
       conditions: [
